# botapp

./: .gitignore  Cargo.toml  PROMPT.md  README.md
.forgejo/workflows/: botapp.yaml
js/: app-extensions.js
src/: lib.rs  main.rs
src/desktop/: drive.rs  mod.rs  sync.rs  tray.rs
ui/app-guides/: local-files.html  native-settings.html
