[package]
name = "botapp"
version = "6.1.0"
edition = "2021"
description = "General Bots App - Tauri wrapper for desktop/mobile"
license = "AGPL-3.0"
repository = "https://github.com/GeneralBots/BotServer"
keywords = ["bot", "ai", "chatbot", "tauri", "desktop"]
categories = ["gui", "network-programming"]

[dependencies]
# Core from botlib
botlib = { workspace = true, features = ["http-client"] }

# Tauri
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }

# Common
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }

# Unix process control
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
ksni = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
trayicon = { workspace = true, optional = true }
image = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["desktop"]
desktop = []
desktop-tray = ["dep:ksni", "dep:trayicon"]

[build-dependencies]
tauri-build = { workspace = true }

[lints]
workspace = true
